--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy":"https://blooming-river-96863.herokuapp.com",
   "eslintConfig": {
     "extends": [
       "react-app",
